API update - both on documentation side and actual app side.
Thymeleaf was deleted from pom dependency list because it won't be need in this app.

Slight changes to Infrastructure stack.
